# PConnect

./: Cargo.toml  README.md  command-list.txt  pconnect.cfg.toml  pconnect_default.cfg.toml  php_connects.cfg.toml
pconnect_install/: Cargo.toml
pconnect_install/src/: main.rs
pconnect_tool/: Cargo.toml  pconnect_global.cfg.toml
pconnect_tool/src/configs/: mod.rs  pconnect_cfg.rs  pconnect_cmd.rs
pconnect_tool/src/managers/: bun_manager.rs  create_project_manager.rs  download_manager.rs  mod.rs  php_manager.rs  postgresql_manager.rs  run_manager.rs  shell_manager.rs
src/: general_commands.rs  main.rs
src/configs/: mod.rs  pconnect_cfg.rs  pconnect_cmd.rs  php_connects_cfg.rs
src/hosts/: mod.rs
src/managers/: bun_manager.rs  create_project_manager.rs  download_manager.rs  mod.rs  mysql_manager.rs  php_manager.rs  postgresql_manager.rs  shell_manager.rs
