[package]
name = "pconnect"
version = "1.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
indicatif = "0.18.4"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
zip = "8.4.0"
