[workspace]
members = [
    "pconnect_tool",
    "pconnect_install",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["JotaveBR <jvgouvea.br@gmail.com>"]
repository = "https://github.com/OsPrimatas/PConnect"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
zip = { version = "8.4.0"}