[package]
name = "pconnect_tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
reqwest.workspace = true
zip.workspace = true
toml = "1.1.0"
ctrlc = "3.5.2"
indicatif = "0.18.4"
regex = "1.12.3"
